Redis serialization needs to fix